2008-01-14  Sven Neumann  <sven@gimp.org>

	* app/core/core-types.h
	* app/display/gimpdisplayshell-callbacks.c
	* app/display/gimpdisplayshell-coords.[ch]
	* app/display/gimpdisplayshell.h
	* app/paint/gimpink.[ch]
	* app/paint/gimpinkundo.[ch]: applied patch from Alexia Death that
	adds an event evaluation function that decides if an event is
	needed or can be discarded. As a side-product some useful dynamics
	parameters like velocity are added to the GimpCoords struct. The
	Ink tool is changed to use this information. See bug #508639.

2008-01-13  Michael Natterer  <mitch@gimp.org>

	* modules/colorsel_cmyk_lcms.c (colorsel_cmyk_config_changed): set
	a tooltip on the profile name label because it's often ellipsized.

2008-01-12  Michael Natterer  <mitch@gimp.org>

	* app/base/color-balance.c: minor formatting fix.

2008-01-11  Michael Natterer  <mitch@gimp.org>

	* modules/gimpinputdevicestore.h
	* modules/gimpinputdevicestore-hal.c
	* modules/gimpinputdevicestore-dx.c: use G_DEFINE_DYNAMIC_TYPE().

	* modules/controller_dx_dinput.c
	* modules/controller_linux_input.c: changed accordingly.

2008-01-10  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-pdb.c (pdb_getattro): Handle __members__
	specially to return the current PDB procedure list, and pass-through
	any attributes that start with "_" without looking them up in the
	PDB.

2008-01-10  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpuimanager.c (gimp_ui_manager_ui_popup):
	gracefully deal with a NULL return value from
	gtk_ui_manager_get_widget(). This happens when the XML menu
	definitions are not found.

2008-01-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/gimpcons.py: fixed spelling of GIMP.

2008-01-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/Makefile.am: fixed conditional build of the JPEG
	plug-in.

2008-01-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpbase/gimpenv.c:  fix editing error in documentation.
